fix: add wrap for footer

--- a/style.css
+++ b/style.css
@@ -135,10 +135,15 @@ body{
 }
 .footer{
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    flex-wrap: wrap;
     padding: 20px;
     background: #DCE2F2;
+}
+.footer-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    /* align-items: center; */
 }
 .github-img{
     max-width: 50px;
